# BET-Lang

./: .gitignore  Cargo.toml  Makefile  README.md  conways_wrapper.py  gen_container_test.c  gen_container_test.py  output.txt  term_color.py
documentation/: README.md
documentation/bet/: bet-syntax.md
documentation/eggeater/: README.md
runtime/: start.rs
src/: alt_parse.rs  alt_stack.rs  alt_stack_variants.rs  compile.rs  compile_fast.rs  compile_shared.rs  consts.rs  drop.rs  fast_lex.rs  lex.rs  main.rs  optimize.rs  parse.rs  parse_bet.rs  parse_shared.rs  semantics.rs  slow_lex.rs  slow_parse.rs  stack.rs  strip.rs  structs.rs  to_slow.rs  transpile.rs  typecheck.rs  typecheck_fast.rs  typecheck_fast_alt.rs  typecheck_fast_shared.rs
tests/: all_tests.rs  compare_equal.snek  good_set.snek  if_let.snek  invalid_argument_equal.snek  nested_loops.snek  sophia_test.snek  transpile.py
tests/bet-samples/: parse_let_nobindings_fail.bet  parse_op_fail4.bet  parse_op_fail6.bet  points.bet  simple_examples.bet
tests/boa/: duplicate_binding_fail0.bet  (+12 more)
tests/boa-bet/: add1.bet  add1_sub1.bet  binding1.bet  binding_nested.bet  complex_expr.bet  duplicate_binding_fail0.bet  duplicate_binding_fail1.bet  duplicate_binding_fail2.bet  nested_arith0.bet  nested_arith1.bet  nested_arith2.bet  nested_arith3.bet  nested_arith4.bet  quick_brown_fox.bet  shadowed_binding_succ0.bet  shadowed_binding_succ1.bet  shadowed_binding_succ2.bet  shadowed_binding_succ3.bet  shadowed_binding_succ4.bet  shadowed_binding_succ5.bet  shadowed_binding_succ6.bet  shadowed_binding_succ7.bet
(+341 files in other folders)
