[package]
name = "cobra"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
once_cell = "1.20.2"
serde = { version = "1.0", features = ["derive"] }
sexp = "1.1.4"
serde_json = "1.0"

[dev-dependencies]
prettydiff = "0.6.4"

